hard-gists/5108298/run.log
=== Docker Run Log for 5108298 ===
Started at: Mi 29. Okt 15:23:05 CET 2025

[2025-10-29 15:23:05] START: Running container for 5108298
[2025-10-29 15:23:06] SUCCESS: Container aae4b1cb5911450caeaf033b9cc1a9ea1665a669d5b7dad4601667319e27e865 started for 5108298
=== Container logs for 5108298 ===
  File "/snippet.py", line 42
    print str
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5108298 ===
[2025-10-29 15:23:08] INFO: Container aae4b1cb5911450caeaf033b9cc1a9ea1665a669d5b7dad4601667319e27e865 has stopped
